@@ -26,6 +26,7 @@ void bind_session_settings()
         .def_readwrite("peer_timeout", &session_settings::peer_timeout)
         .def_readwrite("urlseed_timeout", &session_settings::urlseed_timeout)
         .def_readwrite("urlseed_pipeline_size", &session_settings::urlseed_pipeline_size)
+        .def_readwrite("urlseed_max_request_bytes", &session_settings::urlseed_max_request_bytes)
         .def_readwrite("urlseed_wait_retry", &session_settings::urlseed_wait_retry)
         .def_readwrite("file_pool_size", &session_settings::file_pool_size)
         .def_readwrite("allow_multiple_connections_per_ip", &session_settings::allow_multiple_connections_per_ip)
