@@ -229,6 +229,7 @@ namespace libtorrent
 		SET(peer_timeout, 120, 0),
 		SET(urlseed_timeout, 20, 0),
 		SET(urlseed_pipeline_size, 5, 0),
+		SET(urlseed_max_request_bytes, 16 * 1024 * 1024, 0),
 		SET(urlseed_wait_retry, 30, 0),
 		SET(file_pool_size, 40, 0),
 		SET(max_failcount, 3, &session_impl::update_max_failcount),
